<resources>
    <string name="app_name">ChatApp</string>
    <string name="login_username">username</string>
    <string name="password">password</string>
    <string name="new_account">new account</string>
    <string name="sign_in">sign in</string>
    <string name="Send">send</string>
    <string name="channel_id">10001</string>
    <string name="chanel_name">channel name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">sign out</string>
    <string name="new_chat">new chat</string>
    <string name="new_group">new group</string>
    <string name="profile">profile</string>
    <string name="setting">setting</string>
    <string name="phone">phone</string>
    <string name="mail">mail</string>
    <string name="home">Home</string>
    <string name="contact">Contact</string>
    <string name="chat">Chat</string>
    <string name="group">Group</string>
    <string name="error_send">check network and try again please</string>
    <string name="firebaseUserRef">usertest</string>
</resources>