<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_menu_new_chat"
        android:icon="@drawable/icon_new_chat"
        android:title="@string/new_chat"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/main_menu_new_group"
        android:title="@string/new_group"/>
    <item
        android:id="@+id/main_menu_profile"
        android:title="@string/profile"
        android:visible="false" />
    <item
        android:id="@+id/main_menu_setting"
        android:title="@string/setting"
        android:visible="false" />
    <item
        android:id="@+id/main_menu_sign_out"
        android:title="@string/sign_out" />

</menu>