<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.login.RegisterFragment">

    <EditText
        android:id="@+id/register_user_mail"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:background="#27000000"
        android:ems="10"
        android:fontFamily="@font/armata"
        android:hint="@string/mail"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_user_name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="#27000000"
        android:ems="10"
        android:fontFamily="@font/armata"
        android:hint="@string/login_username"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/register_user_mail"
        app:layout_constraintStart_toStartOf="@id/register_user_mail"
        app:layout_constraintTop_toBottomOf="@id/register_user_mail" />


    <EditText
        android:id="@+id/register_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="#27000000"
        android:ems="10"
        android:fontFamily="@font/armata"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/register_user_name"
        app:layout_constraintStart_toStartOf="@+id/register_user_name"
        app:layout_constraintTop_toBottomOf="@+id/register_user_name" />


    <EditText
        android:id="@+id/register_phone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="#27000000"
        android:ems="10"
        android:fontFamily="@font/armata"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/register_password"
        app:layout_constraintStart_toStartOf="@+id/register_password"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

    <TextView
        android:id="@+id/register_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/armata"
        android:padding="5dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/register_phone"
        app:layout_constraintStart_toStartOf="@+id/register_phone"
        app:layout_constraintTop_toBottomOf="@+id/register_phone" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/armata"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>