<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.login.LoginFragment">


    <EditText
        android:id="@+id/login_user_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="100dp"
        android:background="#27000000"
        android:ems="10"
        android:fontFamily="@font/armata"
        android:hint="@string/mail"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/login_logo"
        app:layout_constraintStart_toStartOf="@+id/login_logo"
        app:layout_constraintTop_toTopOf="@+id/login_logo" />


    <EditText
        android:id="@+id/login_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="#27000000"
        android:ems="10"
        android:fontFamily="@font/armata"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/login_user_name"
        app:layout_constraintStart_toStartOf="@+id/login_user_name"
        app:layout_constraintTop_toBottomOf="@+id/login_user_name" />

    <TextView
        android:id="@+id/login_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/armata"
        android:padding="5dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/login_create"
        app:layout_constraintStart_toStartOf="@+id/login_password"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <TextView
        android:id="@+id/login_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/armata"
        android:padding="5dp"
        android:text="@string/new_account"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintStart_toEndOf="@+id/login_submit"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_launcher_background"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/armata"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>